--- a/tth-client/src/app/sites/stage/performance/performance.component.html
+++ b/tth-client/src/app/sites/stage/performance/performance.component.html
@@ -1,8 +1,13 @@
 <div class="performance-component" *ngIf="performance">
-  <app-image-slider [images]='performance.gallery' [listid]='performancesListId'></app-image-slider>
   <div class="performance-content-container main-content-container main-content-container-padding">
     <div class="main-content">
       <h1 class="performance-title" [innerHTML]="performance.title"></h1>
+      <div class="performance-date" [innerHTML]="getDateString()"></div>
+    </div>
+  </div>
+  <app-image-slider [images]='performance.gallery' [listid]='performancesListId'></app-image-slider>
+  <div class="performance-content-container main-content-container main-content-container-padding">
+    <div class="main-content">
       <div class="performance-description" [innerHTML]="performance.description"></div>
     </div>
   </div>
