--- a/tth-client/src/app/sites/stage/stage.component.scss
+++ b/tth-client/src/app/sites/stage/stage.component.scss
@@ -22,12 +22,9 @@
         .performance-poster-mask {
             display: none;
         }
-        .performance-poster-title {
+        .performance-poster-label-container {
             opacity: 1;
             text-transform: uppercase;
-            font-size: 36px;
-            line-height: 40px;
-            padding: 10px;
             font-style: italic;
             color: $main-text-color-on-dark-bg;
             width: 100%;
@@ -37,12 +34,19 @@
                 background-color 0.3s ease,
                 padding 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275)
             );
+            .performance-poster-title {
+                font-size: 20px;
+                line-height: 24px;
+            }
+            .performance-poster-year-label {
+                font-size: 14px;
+            }
         }
         &:hover {
             .performance-poster-mask {
                 background-color: rgba(#000, 0.5);;
             }
-            .performance-poster-title {
+            .performance-poster-label-container {
                 //opacity: 0;
                 background-color: $accent-color-1;
             }
@@ -55,12 +59,12 @@
         padding: 50px 0;
         .performance-poster-container {
             background-image: none !important;
-            .performance-poster-title {
-                padding: 15px 0 15px 50px;                
+            .performance-poster-label-container {
+                padding: 15px 0 15px 20px;                
             }
             &:hover {
-                .performance-poster-title {
-                    padding-left: 70px;
+                .performance-poster-label-container {
+                    padding-left: 30px;
                 }
             }
         }
@@ -90,9 +94,17 @@
                     background-color 0.3s ease
                 );
             }
-            .performance-poster-title {
+            .performance-poster-label-container {
                 text-align: center;
-                z-index: 1;                
+                z-index: 1;
+                padding: 10px;
+                .performance-poster-title {
+                    font-size: 30px;
+                    line-height: 34px;
+                }
+                .performance-poster-year-label {
+                    font-size: 18px;
+                }              
             }
         }
     }
