--- a/tth-client/src/app/sites/locations/location/location.component.scss
+++ b/tth-client/src/app/sites/locations/location/location.component.scss
@@ -3,6 +3,14 @@
 
 .location-content-container {
     .location-content {
-        padding: 50px 0;
+        padding-top: 50px;
     }
+}
+.google-maps-iframe-container {
+    margin-bottom: 100px;
+    margin-top: 100px;
+}
+
+.location-bottom-space {
+    height: 100px;
 }
