:construction: Start to work on SEO

--- a/tth-client/src/app/courses-overview/courses-overview.component.scss
+++ b/tth-client/src/app/courses-overview/courses-overview.component.scss
@@ -1,5 +1,5 @@
-@import '../../variables';
-@import '../../mixins';
+@import '../../variables.scss';
+@import '../../mixins.scss';
 
 .courses-overview {
     width: 100%;
