--- a/tth-client/src/app/sites/courses/course-details/course-details.component.scss
+++ b/tth-client/src/app/sites/courses/course-details/course-details.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../variables';
-@import '../../../../mixins';
+@import '../../../../variables.scss';
+@import '../../../../mixins.scss';
 
 .course-details-content-container {
     color: $main-text-color-on-dark-bg;
