--- a/tth-client/src/app/sites/courses/courses.component.scss
+++ b/tth-client/src/app/sites/courses/courses.component.scss
@@ -1,4 +1,4 @@
-@import '../../../variables';
+@import '../../../variables.scss';
 
 .courses-content-container {
     background-color: $main-text-color;
