--- a/tth-client/src/app/sites/stage/performance/performance.component.scss
+++ b/tth-client/src/app/sites/stage/performance/performance.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../variables';
-@import '../../../../mixins';
+@import '../../../../variables.scss';
+@import '../../../../mixins.scss';
 
 .performance-component {
     animation-name: fade-in;
