--- a/tth-client/src/app/image-slider/image-slider.component.scss
+++ b/tth-client/src/app/image-slider/image-slider.component.scss
@@ -1,5 +1,5 @@
-@import '../../variables';
-@import '../../mixins';
+@import '../../variables.scss';
+@import '../../mixins.scss';
 
 .image-slider-container {
     width: 100%; 
