--- a/tth-client/src/app/shared/footer/footer.component.scss
+++ b/tth-client/src/app/shared/footer/footer.component.scss
@@ -1,5 +1,5 @@
-@import '../../../variables';
-@import '../../../mixins';
+@import '../../../variables.scss';
+@import '../../../mixins.scss';
 
 .footer-container {
     .footer {
