--- a/tth-client/src/app/shared/header/header.component.scss
+++ b/tth-client/src/app/shared/header/header.component.scss
@@ -1,5 +1,5 @@
-@import '../../../variables';
-@import '../../../mixins';
+@import '../../../variables.scss';
+@import '../../../mixins.scss';
 
 /* The navigation bar */
 .navbar {
