--- a/tth-client/src/app/sites/current/current.component.scss
+++ b/tth-client/src/app/sites/current/current.component.scss
@@ -1,5 +1,5 @@
-@import '../../../variables';
-@import '../../../mixins';
+@import '../../../variables.scss';
+@import '../../../mixins.scss';
 
 $postBorderColor: #e1e1e1;
 
