--- a/tth-client/src/app/sites/locations/location/location.component.scss
+++ b/tth-client/src/app/sites/locations/location/location.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../variables';
-@import '../../../../mixins';
+@import '../../../../variables.scss';
+@import '../../../../mixins.scss';
 
 .location-content-container {
     .location-content {
