--- a/tth-client/src/app/sites/locations/locations.component.scss
+++ b/tth-client/src/app/sites/locations/locations.component.scss
@@ -1,5 +1,4 @@
-@import './../stage/stage.component';
-@import './../../courses-overview/courses-overview.component';
+@import './../../../variables.scss';
 
 @media (min-width: $media-breakpoint-md) {
     .courses-overview {
