--- a/tth-client/src/app/sites/stage/stage.component.scss
+++ b/tth-client/src/app/sites/stage/stage.component.scss
@@ -1,5 +1,5 @@
-@import '../../../variables';
-@import '../../../mixins';
+@import '../../../variables.scss';
+@import '../../../mixins.scss';
 
 * {
     box-sizing: border-box;
