--- a/tth-client/src/app/sites/team/team.component.scss
+++ b/tth-client/src/app/sites/team/team.component.scss
@@ -1,5 +1,5 @@
-@import '../../../variables';
-@import '../../../mixins';
+@import '../../../variables.scss';
+@import '../../../mixins.scss';
 
 .team-content-container {
     background-color: $main-background-color-dark;
