--- a/tth-client/src/styles.scss
+++ b/tth-client/src/styles.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import './variables.scss';
 
 /* You can add global styles to this file, and also import other style files */
 body, html {
