titel of course component now german

--- a/tth-client/src/app/sites/courses/courses.component.html
+++ b/tth-client/src/app/sites/courses/courses.component.html
@@ -1,6 +1,6 @@
 <div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)">
     <div class="header-image-title">
-      <h1>Courses</h1>
+      <h1>Kurse</h1>
     </div>
 </div>
 <app-courses-overview></app-courses-overview>
