:art: Remove vimeo overlay

--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -29,6 +29,7 @@ div {
         @include transition(opacity 2s ease);
         &.hide {
             opacity: 0;
+            display: none;
         }
     }
 }
