:bug: Display "Neuigkeiten" on Home-Page

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -4,6 +4,7 @@
 </div>
 {{philosophySection.description | async}}
 <app-main-page-section *ngIf="philosophySection" [sectiondata]='philosophySection'></app-main-page-section>
+<app-main-page-section *ngIf="blogSection" [sectiondata]='blogSection'></app-main-page-section>
 <app-main-page-section *ngIf="coursesSection" [sectiondata]='coursesSection'></app-main-page-section>
 <app-main-page-section *ngIf="performancesSection" [sectiondata]='performancesSection'></app-main-page-section>
 <app-main-page-section *ngIf="performancesSection" [sectiondata]='teamSection'></app-main-page-section>
