--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -26,7 +26,7 @@
         <div class="footer-section-heading">
             Social Media
           </div>
-        <div class="footer-section-content">    
+        <div class="footer-section-content">
           <a class="footer-section-content-link" href="#">
             Facebook
           </a>
@@ -41,9 +41,9 @@
         <div class="footer-section-heading">
             Impressum
         </div>
-        <div class="footer-section-content">  
+        <div class="footer-section-content">
           <div class="footer-section-content-link">Geschützt durch Tanztheater Anita Hanke 2017</div>
-          <div class="footer-section-content-link">Web Design: Niko Reschke and Yasmin Hollenbenders</div>
+          <div class="footer-section-content-link">Web Design: Niko Reschke und Yasmin Hollenbenders</div>
         </div>
       </div>
     </div>
