--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -25,13 +25,13 @@
       <div class="footer-section footer-section-social">
         <div class="footer-section-heading">
             Social Media
-          </div>
+        </div>
         <div class="footer-section-content">
-          <a class="footer-section-content-link" href="#">
-            Facebook
+          <a class="footer-section-content-link-icon" href="https://www.facebook.com/Tanztheater/">
+            <i class="fab fa-facebook-square fa-3x"></i>
           </a>
-          <a class="footer-section-content-link" href="#">
-            YouTube
+          <a class="footer-section-content-link-icon" href="https://www.youtube.com/user/TanztheaterAnitaHank/videos?view=0&sort=dd&flow=grid">
+            <i class="fab fa-youtube fa-3x"></i>
           </a>
         </div>
       </div>
