--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -25,6 +25,14 @@
                     }
                     .footer-section-content-link-inline {
                         display: inline-block;
+                        margin-right: 4px;
+                    }
+                    .footer-section-content-link-icon {
+                        display: inline-block;
+                        text-decoration: none;
+                        color: $main-text-color;
+                        width: 50%;
+                        margin-top: 10px;
                     }
                     .footer-section-content-break {
                         height: 15px;
@@ -40,7 +48,7 @@
         .footer {
             .footer-section-container {
                 .footer-section {
-                    margin: 30px;      
+                    margin: 30px;
                 }
             }
         }
@@ -51,23 +59,23 @@
     .footer-container {
         padding: 50px;
         .footer {
-            max-width: $media-breakpoint-md; 
-            margin: 0 auto;            
+            max-width: $media-breakpoint-md;
+            margin: 0 auto;
             @include flexbox();
             .footer-section-container {
                 width: 33%;
-                @include flexbox();                 
+                @include flexbox();
                 .footer-section {
-                    text-align: left;   
+                    text-align: left;
                     &.footer-section-contact {
                         padding-right: 50px;
-                    } 
+                    }
                     &.footer-section-social {
                         margin: 0 auto;
-                    } 
+                    }
                     &.footer-section-legal {
                         padding-left: 50px;
-                    }                  
+                    }
                 }
             }
         }
@@ -80,7 +88,7 @@
             max-width: $media-breakpoint-lg;
             .footer-section-container {
                 .footer-section {
-                    
+
                 }
             }
         }
