:sparkles: Introduce imprint
Http 403 Error - don't know if it's working, after Jesse set the collection to public.

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -38,9 +38,9 @@
     </div>
     <div class="footer-section-container">
       <div class="footer-section footer-section-legal">
-        <div class="footer-section-heading">
+        <a class="footer-section-heading" routerLink="/impressum">
             Impressum
-        </div>
+        </a>
         <div class="footer-section-content">
           <div class="footer-section-content-link">Geschützt durch Tanztheater Anita Hanke 2017</div>
           <div class="footer-section-content-link">Web Design: Niko Reschke und Yasmin Hollenbenders</div>
