--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -15,6 +15,8 @@
                 .footer-section-heading {
                     font-size: 20px;
                     font-weight: 600;
+                    color: $main-text-color;
+                    text-decoration: none;
                 }
                 .footer-section-content {
                     font-size: 14px;
