--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -12,14 +12,14 @@
     width: 100%; /* Full width */
     z-index: 10;
     .logo-container {
-        float: left;  
-        margin: 10px 20px; 
+        float: left;
+        margin: 10px 20px;
         height: 50px;
-        cursor: pointer; 
+        cursor: pointer;
         @include flexbox();
         &:focus {
-            outline: none;                
-        }       
+            outline: none;
+        }
         .logo {
             background-image: url("../../../resources/Logo.png"); //no-repeat;
             background-size: 100% 100%;
@@ -28,13 +28,13 @@
             width: 20px;
         }
         .logo-label-container {
-            display: inline-block; 
-            width: 120px;           
+            display: inline-block;
+            width: 120px;
             .logo-label {
-                color: $header-link-color; 
-                padding: 5px 0px 5px 10px;  
+                color: $header-link-color;
+                padding: 5px 0px 5px 10px;
                 font-size: 16px;
-                text-transform: uppercase;         
+                text-transform: uppercase;
                 span {
                     margin: 0;
                     display: block;
@@ -44,7 +44,7 @@
         }
     }
     .navbar-navigation {
-        display: block;  
+        display: block;
         .navbar-navigation-link {
             display: block;
             color: $header-link-color;
@@ -54,19 +54,20 @@
             cursor: pointer;
         }
     }
+
     .navbar-menu-icon-container {
-        @include transition(background-color 0.5s ease);  
+        @include transition(background-color 0.5s ease);
         &:hover {
             cursor: pointer;
-            background-color: $accent-color-1;  
-        }     
+            background-color: $accent-color-1;
+        }
         .navbar-menu-icon {
             width: 35px;
             float: right;
-            z-index: 99;                   
+            z-index: 99;
             .bar {
                 height: 2px;
-                width: 35px;                
+                width: 35px;
                 background-color: #FFFFFF;
                 margin: 6px 0;
                 @include transition(all 0.5s ease);
@@ -76,8 +77,8 @@
 }
 
 @media (max-width: $media-breakpoint-md) {
-    .navbar { 
-        .navbar-menu-icon-container { 
+    .navbar {
+        .navbar-menu-icon-container {
             position: fixed;
             z-index: 99;
             height: 70px;
@@ -89,38 +90,38 @@
                 margin: 20px 17px;
             }
         }
-        .navbar-navigation {   
+        .navbar-navigation {
             position: fixed;
             top: 0;
             left: 0;
             padding-top: 100px;
             width: 100%;
             height: 100%;
-            transform: translateX(-100%); 
+            transform: translateX(-100%);
             @include transition(transform 0.5s ease);
             overflow: hidden;
             z-index: 1;
             background-color: #202020;
-            .navbar-navigation-link {   
+            .navbar-navigation-link {
                 font-style: italic;
                 font-size: 2em;
                 padding: 15px 0 15px 50px;
                 @include transition(
-                    padding 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), 
+                    padding 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275),
                     background-color 0.3s
-                );  
+                );
                 &:hover {
-                    background-color: $accent-color-1; 
-                    padding-left: 70px;               
+                    background-color: $accent-color-1;
+                    padding-left: 70px;
                 }
             }
         }
     }
     .navbar.mobile-nav-open {
         .navbar-navigation {
-            transform: translateX(0%);            
-        }  
-        .navbar-menu-icon-container { 
+            transform: translateX(0%);
+        }
+        .navbar-menu-icon-container {
             background-color: transparent;
             .navbar-menu-icon {
                 .bar1 {
@@ -140,12 +141,12 @@
 }
 
 @media (min-width: $media-breakpoint-md) {
-    .navbar { 
-        .navbar-menu-icon-container { 
-            display: none;            
+    .navbar {
+        .navbar-menu-icon-container {
+            display: none;
         }
-        .navbar-navigation {            
-            @include flex(1);  
+        .navbar-navigation {
+            @include flex(1);
             @include flexbox();
             @include justify-content(flex-end);
             .navbar-navigation-link {
@@ -153,14 +154,60 @@
                 @include transition(border-bottom 0.3s ease);
                 height: 25px;
                 margin: 25px 20px 20px 20px;
-                text-align: center;                
+                text-align: center;
                 &:hover {
-                   border-bottom: 1px solid #fff;        
+                   border-bottom: 1px solid #fff;
                 }
-            } 
+            }
             .home-link {
                 display: none;
             }
         }
     }
+}
+
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  border: none;
+  outline: none;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
