:sparkles: Split "Kurse" and "Preise und Stundepläne"

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -26,8 +26,7 @@
         </a>
         <div class="dropdown-content">
           <a routerLink="/kurse">Kurse</a>
-          <a routerLink="/kurse">Preise</a>
-          <a routerLink="/kurse">Stundenpläne</a>
+          <a routerLink="/kurs-informationen">Preise und Stundenpläne</a>
         </div>
       </div>
       <!--<a class="navbar-navigation-link" routerLink="/kurse" (click)="toggleMobileNav()">-->
