--- a/src/app/sites/team/team.component.html
+++ b/src/app/sites/team/team.component.html
@@ -2,7 +2,7 @@
 <div class="team-content-container main-content-container main-content-container-padding">
   <div class="team-content main-content">
     <div *ngFor="let teacher of teachers" class="team-member-container">
-      <div class="team-member-card">
+      <div class="team-member-card" [routerLink]="['/lehrer', teacher.firstName]">
         <div class="team-member-bg-container" [ngStyle]="getBackgroundStyle(teacher.image)">
           <div class="team-member-bg-mask">
           </div>
@@ -15,7 +15,7 @@
 
           </div>
           <div class="team-member-tag-task" [innerHTML]="teacher.task">
-              
+
           </div>
         </div>
       </div>
