:lipstick: Fix locations page

--- a/src/app/sites/locations/locations.component.scss
+++ b/src/app/sites/locations/locations.component.scss
@@ -1,4 +1,5 @@
 @import './../../../variables.scss';
+@import './../../courses-overview/courses-overview.component';
 
 @media (min-width: $media-breakpoint-md) {
     .courses-overview {
