:art: Use nested Sass Syntax for dropdown

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -25,8 +25,8 @@
           <i class="fa fa-caret-down"></i>
         </a>
         <div class="dropdown-content">
-          <a routerLink="/kurse">Kurse</a>
-          <a routerLink="/kurs-informationen">Preise und Stundenpläne</a>
+          <a class="dropdown-link" routerLink="/kurse">Kurse</a>
+          <a class="dropdown-link" routerLink="/kurs-informationen">Preise und Stundenpläne</a>
         </div>
       </div>
       <!--<a class="navbar-navigation-link" routerLink="/kurse" (click)="toggleMobileNav()">-->
