:lipstick: Only display dropdown arrow on hover

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -22,7 +22,7 @@
       </a>
       <div class="dropdown">
         <a class="navbar-navigation-link" routerLink="/kurse" (click)="toggleMobileNav()">Kurse
-          <i class="fa fa-caret-down"></i>
+          <i class="dropdown-arrow fa fa-caret-down"></i>
         </a>
         <div class="dropdown-content">
           <a class="dropdown-link" routerLink="/kurse">Kurse</a>
