--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -54,49 +54,6 @@
             text-transform: uppercase;
             cursor: pointer;
         }
-
-        /* The dropdown container */
-        .dropdown {
-            float: left;
-            overflow: hidden;
-
-            &:hover {
-                .dropdown-arrow {
-                    opacity: 1;
-                }
-                .dropdown-content {
-                    display: block;
-                }
-            }
-
-            .dropdown-arrow {
-                opacity: 0;
-                @include transition(opacity 0.3s ease);
-            }
-
-            /* Dropdown content (hidden by default) */
-            .dropdown-content {
-                display: none;
-                position: absolute;
-                background-color: #f9f9f9;
-                min-width: 160px;
-                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                z-index: 1;
-
-                .dropdown-link {
-                    float: none;
-                    color: black;
-                    padding: 12px 16px;
-                    text-decoration: none;
-                    display: block;
-                    text-align: left;
-
-                    &:hover {
-                        background-color: #ddd;
-                    }
-                }
-            }
-        }
     }
 
     .navbar-menu-icon-container {
@@ -146,10 +103,11 @@
             overflow: hidden;
             z-index: 1;
             background-color: #202020;
+
             .navbar-navigation-link {
                 font-style: italic;
-                font-size: 2em;
-                padding: 15px 0 15px 50px;
+                font-size: 1.8em;
+                padding: 4px 0 4px 50px;
                 @include transition(
                     padding 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275),
                     background-color 0.3s
@@ -157,6 +115,20 @@
                 &:hover {
                     background-color: $accent-color-1;
                     padding-left: 70px;
+                }
+            }
+
+            .dropdown {
+                display: block;
+
+                /* Only display the dropdown content on mobile so that "Kurse" is only displayed once */
+                > .navbar-navigation-link {
+                    display: none;
+                }
+                
+                .dropdown-content {
+                    display: block;
+
                 }
             }
         }
@@ -193,16 +165,59 @@
             @include flex(1);
             @include flexbox();
             @include justify-content(flex-end);
-            .navbar-navigation-link {
-                border-bottom: 1px transparent;
-                @include transition(border-bottom 0.3s ease);
+
+            .navbar-navigation-link:not(.dropdown-link) {
                 height: 25px;
                 margin: 25px 20px 20px 20px;
-                text-align: center;
+                text-align: center; 
+                border-bottom: 1px transparent;
+                @include transition(border-bottom 0.3s ease);
                 &:hover {
-                   border-bottom: 1px solid #fff;
+                    border-bottom: 1px solid #fff;
+                 }
+            }
+
+            .dropdown {
+                overflow: hidden;
+
+                &:hover {
+                    .dropdown-arrow {
+                        opacity: 1;
+                    }
+                    .dropdown-content {
+                        display: block;
+                    }
+                }
+
+                .dropdown-arrow {
+                    opacity: 0;
+                    @include transition(opacity 0.3s ease);
+                }
+
+                .dropdown-content {
+                    display: none;
+                    position: absolute;
+                    background-color: #f9f9f9;
+                    min-width: 160px;
+                    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                    z-index: 1;
+
+                    .dropdown-link {
+                        float: none;
+                        color: black;
+                        margin: 0;
+                        padding: 12px 16px;
+                        text-decoration: none;
+                        display: block;
+                        text-align: left;
+
+                        &:hover {
+                            background-color: #ddd;
+                        }
+                    }
                 }
             }
+
             .home-link {
                 display: none;
             }
