--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -10,11 +10,19 @@
           <span class="footer-section-content-link">{{locationMG.addressStreet}}</span>
           <span class="footer-section-content-link footer-section-content-link-inline">{{locationMG.addressZIP}}</span>
           <span class="footer-section-content-link footer-section-content-link-inline">{{locationMG.addressCity}}</span>
+          <span class="footer-section-content-link">Beratungszeiten:</span>
+          <span class="footer-section-content-link">{{locationMG.consultationTime1}}</span>
+          <span class="footer-section-content-link" *ngIf="locationMG.consultationTime2">{{locationMG.consultationTime2}}</span>
+          <span class="footer-section-content-link" *ngIf="locationMG.consultationTime3">{{locationMG.consultationTime3}}</span>
           <div class="footer-section-content-break"></div>
           <span class="footer-section-content-link">{{locationLB.addressName}}</span>
           <span class="footer-section-content-link">{{locationLB.addressStreet}}</span>
           <span class="footer-section-content-link footer-section-content-link-inline">{{locationLB.addressZIP}}</span>
           <span class="footer-section-content-link footer-section-content-link-inline">{{locationLB.addressCity}}</span>
+          <span class="footer-section-content-link">Beratungszeiten:</span>
+          <span class="footer-section-content-link">{{locationLB.consultationTime1}}</span>
+          <span class="footer-section-content-link" *ngIf="locationLB.consultationTime2">{{locationLB.consultationTime2}}</span>
+          <span class="footer-section-content-link" *ngIf="locationLB.consultationTime3">{{locationLB.consultationTime3}}</span>
           <div class="footer-section-content-break"></div>
           <span class="footer-section-content-link">Tel. {{phone}}</span>
           <span class="footer-section-content-link">{{email}}</span>
