:art: Move social media icons closer together on mobile

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -34,7 +34,7 @@
         <div class="footer-section-heading">
             Social Media
         </div>
-        <div class="footer-section-content">
+        <div class="footer-section-content footer-section-content-social">
           <a class="footer-section-content-link-icon" href="https://www.facebook.com/Tanztheater/">
             <i class="fab fa-facebook-square fa-3x"></i>
           </a>
