--- a/src/app/sites/imprint/imprint.component.html
+++ b/src/app/sites/imprint/imprint.component.html
@@ -1,9 +1,6 @@
 <div class="imprint-content-container main-content-container main-content-container-padding">
   <div class="imprint-content main-content">
-    <div  class="main-page-section-caption">{{title}}</div>
-    <!--<p class="main-page-section-description">-->
-      <!--{{description}}-->
-    <!--</p>-->
-    <div class="imprint-general-description" [innerHTML]='description'></div>
+    <h1  class="imprint-heading">Impressum</h1>
+    <div class="imprint-general-description" [innerHTML]='imprint'></div>
   </div>
 </div>
