--- a/src/app/sites/imprint/imprint.component.scss
+++ b/src/app/sites/imprint/imprint.component.scss
@@ -6,31 +6,22 @@
   padding-bottom: 20px;
   color: $main-text-color-on-light-bg;
 
-  .schedule {
-    width:100%;
-    height: 350px;
+  .imprint-heading {
+    font-size: 30px;
+    font-weight: 600;
   }
 }
 
 @media (min-width: $media-breakpoint-md) {
-  .header-image {
-    display: none;
-  }
   .imprint-content-container {
     padding-top: 50px;
     padding-bottom: 50px;
-    .schedule {
-      height: 600px;
-    }
   }
 }
 
-@media (min-width: $media-breakpoint-md) {
+@media (min-width: $media-breakpoint-lg) {
   .imprint-content-container {
     padding-top: 70px;
     padding-bottom: 70px;
-    .schedule {
-      height: 750px;
-    }
   }
 }
