--- a/src/app/sites/courses/course-details/course-details.component.html
+++ b/src/app/sites/courses/course-details/course-details.component.html
@@ -2,8 +2,9 @@
 <div class="course-details-content-container main-content-container main-content-container-padding" *ngIf="course">
   <div class="main-content">
     <div class="course-description" [innerHTML]="course.description"></div>
-  </div>
 
-  <a class="course-details-link" routerLink="/kurs-informationen">zu den Stundenplänen</a>
+    <a class="course-details-link" routerLink="/kurs-informationen">zu den Stundenplänen</a>
+    <iframe class="course-details-video" *ngIf="course.youtubeId" [src]="getYoutubeLink()" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </div>
 </div>
 <!--<app-image-slider [images]='[course.image]' [listid]='coursesListShortId' *ngIf="course"></app-image-slider>-->
