--- a/src/app/main-page/main-page-section/main-page-section.component.html
+++ b/src/app/main-page/main-page-section/main-page-section.component.html
@@ -1,5 +1,5 @@
 <div class="{{section.cssClass}} main-page-section-background" [ngStyle]="getBackgroundStyle(section.image)">
-  <div class="main-page-section-container">
+  <div class="main-page-section-container" [ngClass]="firstSection ? 'first-section-container' : ''">
     <div class="main-page-section-content-container">
       <div class="main-page-section-content" [ngClass]="section.routerLink ? 'section-link' : ''" (click)="goToSection(section)">
         <div  class="main-page-section-caption">{{section.title}}</div>
