--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,7 +3,7 @@
     <div class="video-overlay" [ngClass]="videoLoaded === true  ? 'hide' : ''"></div>
 </div>
 {{philosophySection.description | async}}
-<app-main-page-section *ngIf="philosophySection" [sectiondata]='philosophySection'></app-main-page-section>
+<app-main-page-section *ngIf="philosophySection" [sectiondata]='philosophySection' isFirstSection='true'></app-main-page-section>
 <app-main-page-section *ngIf="blogSection" [sectiondata]='blogSection'></app-main-page-section>
 <app-main-page-section *ngIf="coursesSection" [sectiondata]='coursesSection'></app-main-page-section>
 <app-main-page-section *ngIf="performancesSection" [sectiondata]='performancesSection'></app-main-page-section>
