:bug: Close mobile nav on click

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -25,8 +25,8 @@
           <i class="dropdown-arrow fa fa-caret-down"></i>
         </a>
         <div class="dropdown-content">
-          <a class="navbar-navigation-link dropdown-link" routerLink="/kurse">Kurse</a>
-          <a class="navbar-navigation-link dropdown-link" routerLink="/kurs-informationen">Preise und Stundenpläne</a>
+          <a class="navbar-navigation-link dropdown-link" routerLink="/kurse" (click)="toggleMobileNav()">Kurse</a>
+          <a class="navbar-navigation-link dropdown-link" routerLink="/kurs-informationen" (click)="toggleMobileNav()">Preise und Stundenpläne</a>
         </div>
       </div>
       <a class="navbar-navigation-link" routerLink="/aktuelles" (click)="toggleMobileNav()">
