:art: Add instagram link in footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -38,6 +38,9 @@
           <a class="footer-section-content-link-icon" href="https://www.facebook.com/Tanztheater/">
             <i class="fab fa-facebook-square fa-3x"></i>
           </a>
+          <a class="footer-section-content-link-icon" href="https://www.instagram.com/das_tanztheater/">
+            <i class="fab fa-instagram fa-3x"></i>
+          </a>
           <a class="footer-section-content-link-icon" href="https://www.youtube.com/user/TanztheaterAnitaHank/videos?view=0&sort=dd&flow=grid">
             <i class="fab fa-youtube fa-3x"></i>
           </a>
