--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -78,6 +78,9 @@
                     }
                     &.footer-section-social {
                         margin: 0 auto;
+                        .footer-section-content-link-icon:first-of-type {
+                            margin-left: 0;
+                        }
                     }
                     &.footer-section-legal {
                         padding-left: 50px;
