--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <div class="main-page-title-video-container">
-    <div id="video-iframe" class="video-iframe"></div>
+    <iframe id="video-iframe" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/zLtXD9J2ZhU?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=zLtXD9J2ZhU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     <div class="video-overlay" [ngClass]="videoLoaded === true  ? 'hide' : ''"></div>
 </div>
 <app-main-page-section *ngIf="philosophySection" [sectiondata]='philosophySection' isFirstSection='true'></app-main-page-section>
