:wrench: Use zenkit shortId for course routing

--- a/src/app/courses-overview/courses-overview.component.html
+++ b/src/app/courses-overview/courses-overview.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="course-tags-container main-content-container" *ngIf="courses">
     <div class="course-tags main-content">
-      <a *ngFor="let course of courses, let i = index" class="course-tag-container" (mouseenter)="mouseEnter(course)" (mouseleave)="mouseLeave(course)" [routerLink]="['/kurse', i]">
+      <a *ngFor="let course of courses, let i = index" class="course-tag-container" (mouseenter)="mouseEnter(course)" (mouseleave)="mouseLeave(course)" [routerLink]="['/kurse', course.shortId, convertStringToUrlId(course.title)]">
         <div class="black-bg-mask">
           <div class="home-thumb-black-bg">
 
