--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -3,7 +3,7 @@
   <div class="schedule-container">
     <div class="day-container" *ngFor="let appointments of courseAppointmentsByDay; let dayIndex = index">
       <div class="day-title">{{getDayTitle(dayIndex)}}</div>
-      <div class="appointment-container" *ngFor="let appointment of appointments">
+      <div class="appointment-container" *ngFor="let appointment of appointments" [routerLink]="['/kurse', appointment.course.shortId, convertStringToUrlId(appointment.course.title)]">
         <div class="appointment-time">
           {{getTimeString(appointment.dateStart)}}-{{getTimeString(appointment.dateEnd)}} Uhr
         </div>
