--- a/src/app/sites/courses/course-information/course-information.component.html
+++ b/src/app/sites/courses/course-information/course-information.component.html
@@ -1,7 +1,8 @@
 <app-header-image [image]='backgroundImage' [listId]='coursesListShortId' title='Preise und Stundenpläne'></app-header-image>
 <div class="courses-content-container main-content-container main-content-container-padding">
   <div class="courses-content main-content">
-    <app-schedule></app-schedule>
+    <app-schedule locationInitials='MG'></app-schedule>
+    <app-schedule locationInitials='LB'></app-schedule>
     <a name="preise"></a>
     <h2 id="preise">Preise</h2>
     <div class="courses-gerneral-description" [innerHTML]='text'></div>
