--- a/src/app/components/schedule/schedule.component.scss
+++ b/src/app/components/schedule/schedule.component.scss
@@ -11,7 +11,7 @@
                 font-size: 13px;
                 margin-bottom: 10px;
                 @include transition(color 0.3s ease);
-                &:hover {
+                &.has-course-link:hover {
                     color: $accent-color-1;
                     cursor: pointer;
                 }
