:sparkles: Allow to filter appointments by age and level

--- a/src/app/components/header-image/header-image.component.scss
+++ b/src/app/components/header-image/header-image.component.scss
@@ -44,6 +44,7 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
+            opacity: 0.8;
             .header-image-title-move-in {
                 animation-name: slide-in;
                 animation-delay: 0.3s;
