--- a/src/app/components/schedule/schedule.component.scss
+++ b/src/app/components/schedule/schedule.component.scss
@@ -2,18 +2,70 @@
 @import '../../../mixins.scss';
 
 .schedule-component {
+    .schedule-header {
+        .schedule-title {
+            margin-top: 0;
+        }
+        .schedule-navigation-container {
+            margin-bottom: 20px;
+            .schedule-navigation-segment {
+                display: inline-block;
+                &.schedule-navigation-age-groups {
+                    margin-right: 20px;
+                }
+                select {
+                    color: $main-text-color;
+                    background-color: $main-background-color-dark;
+                    height: 30px;
+                    margin-bottom: 10px;
+                }
+                .schedule-navigation-element {
+                    display: inline-block;
+                    margin-right: 15px;
+                    &:hover {
+                        cursor: pointer;
+                    }
+                    &.active {
+                        .schedule-navigation-text {
+                            border-bottom: 1px solid $main-text-color;
+                        }
+                    }
+                    &:not(.active) {
+                        .schedule-info-icon {
+                            color: #414141 !important;
+                            border-color: #414141 !important;
+                        }
+                    }
+                    .schedule-navigation-text {
+                        margin-left: 10px;
+                        display: inline-block;
+                    }
+                }
+            }
+        }
+    }
     .schedule-container {
         .day-container {
             .day-title {
                 border-bottom: 1px solid $main-text-color;
+                margin-bottom: 10px;
             }
             .appointment-container {
                 font-size: 13px;
                 margin-bottom: 10px;
                 @include transition(color 0.3s ease);
                 &.has-course-link:hover {
-                    color: $accent-color-1;
                     cursor: pointer;
+                }
+                .appointment-time {
+                    color: #9f9f9f;
+                    font-size: 11px;
+                }
+                .appointment-info-icons-container {
+                    .schedule-info-icon {
+                        display: inline-block;
+                        margin-right: 10px;
+                    }
                 }
             }
         }
@@ -21,23 +73,87 @@
     margin-bottom: 50px;
 }
 
+@media (max-width: $media-breakpoint-md - 1) {
+    .schedule-component {
+        .schedule-container {
+            .day-container {
+                .day-title {
+                    font-size: 1.5em;
+                }
+                .appointment-container {
+                    .appointment-title {
+                        font-size: 1.5em;
+                    }
+                    .appointment-time {
+                        color: #9f9f9f;
+                        font-size: 1.2em;
+                    }
+                    .appointment-info-icons-container {
+                        font-size: 1.2em;
+                        .schedule-info-icon {
+                            background-color: transparent !important;
+                            color: $main-text-color !important;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
 @media (min-width: $media-breakpoint-md) {
     .schedule-component {
+        .schedule-mobile-text {
+            display: none;
+        }
+        .schedule-header {
+            display: flex;
+            flex-direction: row;
+            .schedule-title {
+                flex: 1;
+            }
+            .schedule-navigation-container {
+                // display: flex;
+                // flex-direction: row;
+                margin-top: 8px;
+                .schedule-navigation-age-groups {
+                    // flex: 1;
+                }
+            }
+        }
         .schedule-container {
             display: flex;
             flex-direction: row;
             .day-container {
-                width: 19%;
-                .day-title {
-
-                }
+                width: 20%;
                 .appointment-container {
-                    padding-right: 15px;
+                    padding: 5px 10px;
+                    margin-right: 15px;
                     display: flex;
                     flex-direction: column;
-                }
-                .day-title, .appointment-container {
-                    
+                    border: 1px solid #2c2c2c;
+                    background-color: #171717;
+                    border-radius: 3px;
+                    &.has-course-link:hover {
+                        background-color: #222222;
+                    }
+                    .appointment-info-icons-container {
+                        display: inline-block;
+                        .appointment-age-groups, .appointment-levels {
+                            display: inline-block;
+                        }
+                        .schedule-info-icon {
+                            min-width: 20px;
+                            height: 20px;
+                            text-align: center;
+                            font-size: 12px;
+                            border-radius: 10px;
+                            padding: 0 7px;
+                            border: 1px solid;
+                            margin-bottom: 5px;
+                        }
+                    }
                 }
             }
         }
