:art: Display page title for courses and locations on mobile

--- a/src/app/sites/courses/courses.component.html
+++ b/src/app/sites/courses/courses.component.html
@@ -1,6 +1,6 @@
-<div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)">
-    <div class="header-image-title">
-      <h1>Kurse</h1>
-    </div>
+<div class="main-content-container main-content-container-padding courses-content-container">
+  <div class="main-content">
+    <h2 class="courses-title main-title">Kurse</h2>
+  </div>
 </div>
 <app-courses-overview></app-courses-overview>
