--- a/src/app/sites/locations/locations.component.html
+++ b/src/app/sites/locations/locations.component.html
@@ -1,3 +1,8 @@
+<div class="main-content-container main-content-container-padding locations-content-container">
+  <div class="main-content">
+    <h2 class="locations-title main-title">Standorte</h2>
+  </div>
+</div>
 <div class="courses-overview">
   <div class="courses-overview-bg-images-mask">
     <div *ngFor="let location of locations" class="courses-overview-bg-image-container" [ngStyle]="getBackgroundStyle(location.image)">
