--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,10 @@ app-current {
     padding-right: 20px; 
 }
 
+.main-title {
+    margin: 0;
+}
+
 /*************
 * ANIMATIONS *
 **************/
